test/negative/InterfaceInheritIdenticalSignatures/A.java
import B.B;
import C.C;
public interface A {
}
